[gd_scene load_steps=23 format=2]

[ext_resource path="res://Fonts/NicholsonGothicRegular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/Spritesheets/Custom Edited - Five Nights at Freddys Customs - Afton House Characters Undertale Overworld-Style (1).png" type="Texture" id=4]
[ext_resource path="res://shaders/vignette.tres" type="Material" id=5]
[ext_resource path="res://scripts/Codes.gd" type="Script" id=6]
[ext_resource path="res://scenes/Faz_Coins.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/Music/Toby Fox - Mysterious Place (2).mp3" type="AudioStream" id=8]
[ext_resource path="res://Sprites/Hallowed_Key.png" type="Texture" id=9]
[ext_resource path="res://Sprites/sparkle.png" type="Texture" id=10]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0705882, 0.0313726, 0.0313726, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CPUParticles2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.47451, 0.345098, 0.109804 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "anim"
length = 2.382
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0705882, 0.0313726, 0.0313726, 1 ), Color( 0.0313726, 0.0235294, 0.0470588, 1 ), Color( 0.0705882, 0.0313726, 0.0313726, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CPUParticles2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.47451, 0.345098, 0.109804 ), Color( 0.996078, 0.988235, 1, 0.027451 ), Color( 1, 0.47451, 0.345098, 0.109804 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 75
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 1244, 812, 42, 59 )

[sub_resource type="DynamicFont" id=3]
size = 21
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("key:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("key:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 533, 466 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Door:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Door:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 347, 122 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("fade:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Music:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "unlocked"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("key:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("key:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.1, 3.1, 3.8 ),
"transitions": PoolRealArray( 0.466517, 1, 0.277392, 1 ),
"update": 0,
"values": [ Vector2( 533, 466 ), Vector2( 533, 333 ), Vector2( 533, 333 ), Vector2( -30, 316 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Door:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.4, 4.9 ),
"transitions": PoolRealArray( 0.258816, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.175, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Door:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 3.4, 4.9 ),
"transitions": PoolRealArray( 0.277392, 1 ),
"update": 0,
"values": [ Vector2( 347, 122 ), Vector2( 400, 122 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("fade:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 5.2, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Music:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 5.2, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -15.619 ]
}

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.119128, 0.757669 ), 0.0, 0.0, 0, 0, Vector2( 0.65604, 0.58589 ), -0.192444, -0.192444, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.0246914, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.0740741, 0.0740741, 0.0740741, 1, 1, 1, 1, 1 )

[sub_resource type="Environment" id=8]
background_mode = 4
glow_enabled = true
glow_intensity = 0.95
glow_strength = 1.25
glow_bloom = 0.03
glow_blend_mode = 0

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade"
length = 2.092
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Codes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 94, 56 )
script = ExtResource( 6 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0313726, 0.0313726, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BG"]
autoplay = "anim"
anims/RESET = SubResource( 9 )
anims/anim = SubResource( 10 )

[node name="LOGO" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_top = 39.0
margin_right = 500.0
margin_bottom = 122.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "FNAF SANDBOX"
align = 1

[node name="Door" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -178.0
margin_right = 143.0
margin_bottom = 62.0
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="key" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 533.0
margin_top = 466.0
margin_right = 614.0
margin_bottom = 537.0
rect_rotation = 180.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = 82.0
margin_right = 143.0
margin_bottom = 144.0
focus_mode = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
align = 1
placeholder_text = "ENTER A CODE"

[node name="Vignette" type="ColorRect" parent="."]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -134.0
margin_right = 47.0
margin_bottom = -97.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "BACK"
flat = true

[node name="Faz_Coins" parent="." instance=ExtResource( 7 )]
position = Vector2( 76, 413 )
coins = 1294.0
gold_coins = 258.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 4 )
anims/unlocked = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.701961, 0.439216, 0.439216, 0.211765 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -474.0
margin_top = 122.0
margin_right = 545.0
margin_bottom = 344.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 589, 653 )
amount = 43
lifetime = 5.0
explosiveness = 0.2
randomness = 0.07
lifetime_randomness = 0.07
texture = ExtResource( 10 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 1 )
spread = 13.88
gravity = Vector2( 0, -98 )
angular_velocity = 0.98
angular_velocity_random = 0.2
orbit_velocity = 0.06
orbit_velocity_random = 0.16
radial_accel = 1.38
scale_amount = 0.27
scale_amount_random = 0.03
scale_amount_curve = SubResource( 6 )
color = Color( 1, 0.47451, 0.345098, 0.109804 )
color_ramp = SubResource( 7 )
anim_speed = 4.74
anim_speed_random = 0.1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="FADE" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="fade" type="AnimationPlayer" parent="FADE"]
autoplay = "fade"
anims/RESET = SubResource( 11 )
anims/fade = SubResource( 12 )

[connection signal="text_entered" from="LineEdit" to="." method="_on_CODE_text_entered"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
